# OptionPlay

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README_combined.md  SKILL.md  TRAINING_LOG.md  TRAINING_REPORT.md  TRAINING_SUMMARY.md  claude_desktop_config.json  coverage.json  data_inventory.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements-training.txt  requirements.txt  setup-refactoring.sh
config/: analyzer_thresholds.yaml  backtest_optimized_symbols.yaml  enhanced_scoring.yaml  rsi_thresholds.yaml  scanner_config.yaml  scanner_config.yaml.backup-20260218  scoring.yaml  scoring_weights.yaml  scoring_weights.yaml.pre_wf  settings.yaml  strategies.yaml  system.yaml  telegram.yaml  trading.yaml  trading_rules.yaml  validation_config.yaml  watchlists.yaml
data_inventory/: baseline_ath_breakout.json  baseline_bounce.json  baseline_pullback.json  baseline_summary.json  retrain_report_20260206_140138.json  trained_weights_v3_ath_breakout.json  trained_weights_v3_bounce.json  trained_weights_v3_pullback.json  trained_weights_v3_regime_ath_breakout.json  trained_weights_v3_regime_bounce.json  trained_weights_v3_regime_pullback.json  trained_weights_v3_regime_summary.json  trained_weights_v3_sector_ath_breakout.json  trained_weights_v3_sector_bounce.json  trained_weights_v3_sector_pullback.json  trained_weights_v3_sector_summary.json  trained_weights_v3_stability_ath_breakout.json  trained_weights_v3_stability_bounce.json  trained_weights_v3_stability_pullback.json  trained_weights_v3_stability_summary.json  trained_weights_v3_summary.json
docs/: A2_NACHZUG_RESULT.md  ALIGNMENT_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_PLAN_CONTINUATION.md  AUDIT_2026-04.md  AUDIT_DEEP_2026-04.md  A_RESULT.md  B1A_RESULT.md  B1_INDICATORS_AUDIT.md  B2_EARNINGS_AUDIT.md  B34_RESULT.md  B3_AUDIT.md  CODEBASE_ANALYSIS.md  C_AUDIT_2026-04.md  DATA_GAP.md  DATA_SOURCES.md  Daily_ReValidation_Briefing.md  E0_ALPHA_AUDIT.md  E1_MERGE_ANALYSIS.md  E1_RESULT.md  E2_RESULT.md  E2b_AUDIT.md  E3_RESULT.md  EARNINGS_FILTER_DIAGNOSIS.md  Implementation_Briefing_Enhanced_Scoring.md  KICKOFF_E2b_1.md  KICKOFF_E2b_2.md  KICKOFF_E2b_3.md  KICKOFF_E2b_4.md  KICKOFF_E2b_5.md  KICKOFF_PAKET_E4.md  KICKOFF_PAKET_E5.md  KICKOFF_PAKET_G.md  KICKOFF_TECH_DEBT.md  MIGRATION_TO_DI.md  OPTIONPLAY_STRATEGIE_v4.2.md  OptionPlay_Recursive_Logic_Strategie.md  PHASE1_BRIEFING.md  PHASE1_CHANGELOG.md  PHASE4_RESULTS.md  (+33 more)
scripts/: DBupdate.py  analyze_data_gaps.py  analyze_roll_stats.py  analyze_score_predictivity.py  analyze_sma_convergence.py  analyze_sma_convergence_fast.py  analyze_sma_convergence_v2.py  analyze_sma_convergence_v3.py  analyze_sma_convergence_v4.py  backfill_component_scores.py  backfill_historical_data.py  backfill_iv_cache.py  backfill_ohlcv.py  backfill_tradier.py  backfill_trend_continuation_scores.py  backtest_diagonal_full.py  backtest_diagonal_roll.py  backtest_full_v381.py  backtest_per_strategy.py  backtest_signal_based.py  backtest_speed_weights.py  backtest_trained_system.py  backtest_trend_continuation.py  backtest_with_rolls.py  calculate_days_to_exit.py  calculate_derived_metrics.py  calculate_greeks.py  classify_liquidity.py  collect_dividends.py  collect_earnings_eps.py  collect_earnings_marketdata.py  collect_earnings_tradier.py  collect_historical_data.py  collect_historical_earnings.py  collect_historical_options_marketdata.py  collect_historical_yahoo.py  collect_options_5years.py  collect_options_history.py  collect_options_prices.py  collect_options_tradier.py  (+65 more)
src/: __init__.py  __main__.py  config_loader.py  container.py  earnings_cache.py  (+13 more)
(+540 files in other folders)
